src/test/deca/syntax/invalid/homemade/include_synt.res
src/test/deca/syntax/invalid/homemade/included2.decah:7:26: Circular include for file included1.decah
